--- a/python/Tidal_energy.ipynb
+++ b/python/Tidal_energy.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "e96822bf",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ed88768d",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "59ddccf1",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "#Sea water\n",
     "\n",
     "#Northward sea water speed\n",
-    "sea_v_n = 'dat/xFinal'\n",
+    "sea_v_n = 'dataX/xFinal'\n",
     "sea_v_n_xr = xr.open_dataset(sea_v_n)\n",
     "# sea_v_n_xr\n",
     "# Four dimensions matrix that contains the speed in North\n",
@@ -125,17 +125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "317c338f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6797621846199036"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "max(sea_v_df[\"speed\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "e9c138bb",
    "metadata": {},
    "outputs": [
@@ -143,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 867845/867845 [14:28<00:00, 999.08it/s] \n"
+      "100%|██████████| 867845/867845 [13:29<00:00, 1071.46it/s] \n"
      ]
     }
    ],
@@ -185,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "667ec3cc",
    "metadata": {},
    "outputs": [],
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "3f7813ee",
    "metadata": {},
    "outputs": [
@@ -238,7 +249,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 108283/108283 [00:09<00:00, 11747.86it/s]\n"
+      "100%|██████████| 108283/108283 [00:07<00:00, 14935.44it/s]\n"
      ]
     }
    ],
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "cec89c5d",
    "metadata": {},
    "outputs": [],
@@ -273,12 +284,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "4539819d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110125.17691177374"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "max_energy = max(sea_v_filter[\"energy\"])"
+    "max_energy = max(sea_v_filter[\"energy\"])\n",
+    "max_energy"
    ]
   },
   {
